--- a/RCML-presentation.Rmd
+++ b/RCML-presentation.Rmd
@@ -4,7 +4,7 @@ RCML Presentation
 Initial settings, libraries and cleanup.
 ```{r initial, message=FALSE, warning=FALSE}
 rm(list=ls())
-library(foreign)
+library(xlsx)
 library(likert)
 library(xtable)
 setwd("~/Google Drive/MASC-351/")
