--- a/RCML-2014-conference.Rmd
+++ b/RCML-2014-conference.Rmd
@@ -17,30 +17,31 @@ setwd("~/Code/RCML/")
 # Research Question 1
 Import raw scores of algebra misconceptions
 ```{r}
-temp <- read.xlsx("Fall-2013-KATE-post-help.xlsx",sheetName="misconception",stringsAsFactors=FALSE,colIndex=c(1,(3:7)))
-# temp <- temp[-30,]
-DinnerRel       <- temp$Dinner / 15
-FoodDriveRel    <- temp$FoodDrive / 15
-X.valuesRel     <- temp$Xvalues / 2
-CoefficientsRel <- temp$Coefficients / 2
-ExprEqRel       <- temp$ExprEq / 2
-misconception <- data.frame(SRN          = temp$SRN,
-                            Dinner       = DinnerRel, 
-                            FoodDrive    = FoodDriveRel, 
-                            X.values     = X.valuesRel,
-                            Coefficients = CoefficientsRel,
-                            ExprEq       = ExprEqRel)
+#temp.1 <- read.xlsx("Fall-2013-KATE-post-help.xlsx",sheetName="misconception",stringsAsFactors=FALSE,colIndex=c(1,(3:7)))
+temp.1 <- read.xlsx("Fall2013_data.xlsx", sheetName="misconception", stringsAsFactors=FALSE, colIndex=c(1,3:11), endRow=33)
+temp.2 <- temp.1[-c(3,22,23),]
+Percent       <- (temp.2$percent_1 + temp.2$percent_2 + temp.2$percent_3 )  / 15
+Proportion    <- (temp.2$proportion_1 + temp.2$proportion_2 + temp.2$proportion_3) / 15
+X.values      <- temp.2$Xvalues / 2
+Coefficients  <- temp.2$Coefficients / 2
+ExprEq        <- temp.2$ExprEq / 2
+misconception <- data.frame(SRN = temp.2$SRN,
+                            Proportion, 
+                            Percent, 
+                            X.values,
+                            Slope.Int = Coefficients,
+                            Expr.Eq   = ExprEq)
 misconception
-rm(temp)
+rm(temp.1, temp.2)
 ```
 
 Now we rank the misconceptions.
 ```{r}
 misconception <- data.frame(misconception,
-                            Dinner.rank = NA,
-                            FoodDrive.rank = NA,
+                            Proportion.rank = NA,
+                            Percent.rank = NA,
                             X.values.rank = NA,
-                            Coefficients.rank = NA,
+                            SlopeInt.rank = NA,
                             ExprEq.rank = NA)
 ```
 
@@ -58,7 +59,7 @@ my.ranks <- misconception[, c(7:11)]
 my.ranks.agg <- rankagg(my.ranks)
 destat(my.ranks.agg)
 ```
-We can see that the PST did best in the "unequal intervals for the independent variable" misconception and worst with the "linear equation coefficients".  Thus, in decreasing order of comprehension we have (1) Unequal x-values, (2) proportions, (3) percentages, (4) expression versus equation, and (5) linear equation coefficients.
+We can see that the PST did best in the "unequal intervals for the independent variable" misconception and worst with the "linear equation slope and intercept".  Thus, in decreasing order of comprehension we have (1) Unequal x-values, (2) percentages, (3) proportions, (4) expression versus equation, and (5) linear equation slope and intercept.
 
 Now we test for uniformity of the five mean ranks we use a chi-square test. The following expression based on the rank means follows a chi-square distribution:
 
@@ -77,4 +78,16 @@ print(my.chi)
 dchisq(my.chi, 4)
 ```
 Based on the extremely low probability value of the chi-square statistic we conclude that the rank means are different, and thus there is a difference in capability of the PSTs in helping the students with misconceptions. 
+
+
+# Research question 2
+What is the relationship between the capability of helping the students with misconceptions and problem solving knowledge of the PSTs?
+
+We answer this research question by calculating the correlation between KATE questions that test for algebra content knowledge (correct/incorrect scores) and the misconception questions from the equity challenge problems (scored 0,1,2,3,4,5) and the KATE misconceptions questions (scored 0,1,2).  In this case we do not aggregate the three percentages and proportions scores for the three subquestions.
+
+```{r}
+```
+
+# Research question 3
+
 
