--- a/RCML-2014-conference.Rmd
+++ b/RCML-2014-conference.Rmd
@@ -4,35 +4,38 @@ author: "Oner, Indiogine et alii"
 date: "October 22, 2014"
 output: html_document
 ---
-
 Initial settings, libraries and cleanup.
 ```{r initial, message=FALSE, warning=FALSE}
+options(width=120)
 rm(list=ls())
 library(xlsx)
-library(likert)
+library(psych)
 library(pmr)
 setwd("~/Code/RCML/")
 ```
 
 # Research Question 1
 Import raw scores of algebra misconceptions
-```{r}
+```{r load_data}
 #temp.1 <- read.xlsx("Fall-2013-KATE-post-help.xlsx",sheetName="misconception",stringsAsFactors=FALSE,colIndex=c(1,(3:7)))
-temp.1 <- read.xlsx("Fall2013_data.xlsx", sheetName="misconception", stringsAsFactors=FALSE, colIndex=c(1,3:11), endRow=33)
-temp.2 <- temp.1[-c(3,22,23),]
-Percent       <- (temp.2$percent_1 + temp.2$percent_2 + temp.2$percent_3 )  / 15
-Proportion    <- (temp.2$proportion_1 + temp.2$proportion_2 + temp.2$proportion_3) / 15
-X.values      <- temp.2$Xvalues / 2
-Coefficients  <- temp.2$Coefficients / 2
-ExprEq        <- temp.2$ExprEq / 2
-misconception <- data.frame(SRN = temp.2$SRN,
+temp <- read.xlsx("Fall2013_data.xlsx", sheetName="misconception", stringsAsFactors=FALSE, colIndex=c(1,3:22), endRow=33)
+my.data <- temp[-c(3,22,23),]
+rm(temp)
+```
+
+```{r table_misconception}
+Percent       <- (my.data$percent_1 + my.data$percent_2 + my.data$percent_3 )  / 15
+Proportion    <- (my.data$proportion_1 + my.data$proportion_2 + my.data$proportion_3) / 15
+X.values      <- my.data$Xvalues / 2
+Coefficients  <- my.data$Coefficients / 2
+ExprEq        <- my.data$ExprEq / 2
+misconception <- data.frame(SRN = my.data$SRN,
                             Proportion, 
                             Percent, 
                             X.values,
                             Slope.Int = Coefficients,
                             Expr.Eq   = ExprEq)
 misconception
-rm(temp.1, temp.2)
 ```
 
 Now we rank the misconceptions.
@@ -80,14 +83,41 @@ dchisq(my.chi, 4)
 Based on the extremely low probability value of the chi-square statistic we conclude that the rank means are different, and thus there is a difference in capability of the PSTs in helping the students with misconceptions. 
 
 
-# Research question 2
+# Research Question 2
 What is the relationship between the capability of helping the students with misconceptions and problem solving knowledge of the PSTs?
 
-We answer this research question by calculating the correlation between KATE questions that test for algebra content knowledge (correct/incorrect scores) and the misconception questions from the equity challenge problems (scored 0,1,2,3,4,5) and the KATE misconceptions questions (scored 0,1,2).  In this case we do not aggregate the three percentages and proportions scores for the three subquestions.
+We answer this research question by calculating the correlation between KATE questions that test for algebra content knowledge (correct/incorrect scores, binary) and the misconception questions from the equity challenge problems (scored 0,1,2,3,4,5, ordered categorical) and the KATE misconceptions questions (scored 0,1,2, ordered categorical).  In this case we do not aggregate the three percentages and proportions scores for the three subquestions.
 
+We need to remove columns that have all same values because they have 0 variance.  These columns are KATE Q6, Q7, and Q8.
+```{r prepare_ordinal_data}
+equity.misc <- my.data[,2:7]
+equity.misc
+#equity.misc.temp <- lapply(equity.misc, factor, levels=0:5)
+#equity.misc <- data.frame(equity.misc.temp)
+
+KATE.misc <- my.data[,8:10]
+KATE.misc
+#KATE.misc.temp <- lapply(KATE.misc, factor, levels=0:2)
+#KATE.misc <- data.frame(KATE.misc.temp)
+
+KATE.CK <- my.data[,c(11,12,13,14,15,19,20,21)]
+KATE.CK
+#KATE.CK.temp <- lapply(KATE.CK, factor, levels=0:1)
+#KATE.CK <- data.frame(KATE.CK.temp)
+
+big.table <- cbind(equity.misc, KATE.misc, KATE.CK)
+```
+
+Run correlations of ordinal categorical data.
 ```{r}
+my.model <- mixed.cor(big.table, method="spearman")
+my.model
+```
+
+Different procedure
+```{r use_psych}
+corr.test(big.table, method="spearman") -> my.result
+print(my.result, short=FALSE)
 ```
 
 # Research question 3
-
-
